@@ -1001,6 +1001,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Mitsubishi CP3020DA/DAE  (EXPERIMENTAL)
        Mitsubishi CP9550D/DW    (EXPERIMENTAL)
        Mitsubishi CP9810D/DW    (EXPERIMENTAL)
+       Mitsubishi CPD70D/DW     (EXPERIMENTAL)
+       Mitsubishi CPD707D/DW    (EXPERIMENTAL)
 
 	None of these models have been tested and confirmed to work 
 	(or not), so feedback is welcome. 
